--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="tab-container">
         <div id="login-tab" class="visible-tab">
-            <div class="hook button-wrapper" id="change-to-login">
+            <div class="hook button-wrapper non-selectable" id="change-to-login">
                 <button type="button">Use exist Fileset</button>
             </div>
             <div id="login-main" class="main">
@@ -23,10 +23,10 @@
                 <table id="fileset-manager">
                     <thead>
                         <tr>
-                            <th style="width:20px" class="select"><!--チェックマーク--></th>
-                            <th style="width:200px;" class="select">名前</th>
-                            <th style="width:20px;" class="select"><!--鍵マーク--></th>
-                            <th style="width:150px;" class="select">最終利用日時</th>
+                            <th style="width:20px" class="select non-selectable"><!--チェックマーク--></th>
+                            <th style="width:200px;" class="select non-selectable">名前</th>
+                            <th style="width:20px;" class="select non-selectable"><!--鍵マーク--></th>
+                            <th style="width:150px;" class="select non-selectable">最終利用日時</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -68,37 +68,37 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="group" id="login-password-group">
+                <div class="group non-selectable" id="login-password-group">
                     <label>Password
-                        <input type="password" id="login-password" name="password" /></label>
+                        <input class="selectable" type="password" id="login-password" name="password" /></label>
                     <p class="msg"></p>
                 </div>
-                <div class="button-wrapper">
+                <div class="button-wrapper non-selectable">
                     <button type="button" id="login-button">Login</button>
                 </div>
             </div>
         </div>
         <div id="register-tab" class="hidden-tab">
-            <div class="hook button-wrapper">
+            <div class="hook button-wrapper non-selectable">
                 <button type="button" id="change-to-register">Make new fileset?</button>
             </div>
             <div id="register-main" class="main">
-                <div class="group" id="fileset-name-group">
+                <div class="group non-selectable" id="fileset-name-group">
                     <label>Fileset name
-                        <input type="text" id="fileset-name" name="fileset-name" /></label>
+                        <input class="selectable" type="text" id="fileset-name" name="fileset-name" /></label>
                     <p class="msg"></p>
                 </div>
-                <div class="group" id="need-password-group">
+                <div class="group non-selectable" id="need-password-group">
                     <label>Need password?
                         <input type="checkbox" name="need-password" id="need-password" /></label>
                 </div>
-                <div class="group" id="password-group">
+                <div class="group non-selectable" id="password-group">
                     <label>Password
-                        <input type="password" id="registration-password" name="password" /></label>
+                        <input class="selectable" type="password" id="registration-password" name="password" /></label>
                     <p class="msg"></p>
                 </div>
                 <div class="button-wrapper">
-                    <button type="button" id="registration-button">Register</button>
+                    <button class="non-selectable" type="button" id="registration-button">Register</button>
                 </div>
             </div>
         </div>
@@ -106,10 +106,16 @@
 
     <div id="main" class="inactive">
         <div id="fileset-editor-container">
-            <div class="cover hidden">
-                Add new fileset
+            <div class="cover non-selectable">
+                <div class="bottom-button">
+                    <img src="assets/svg/tag.svg">
+                </div>
+                <div class="bottom-button">
+                    <img src="assets/svg/rectangle.svg">
+                    <img class="hidden" src="assets/svg/checkbox.svg">
+                </div>
             </div>
-            <div class="content" id="fileset-editor">
+            <div class="content hidden" id="fileset-editor">
                 <div id="editing-fileset-identifiers" class="fileset-header">
                     <div id="fileset-name-group" class="fileset-name">
                         <input type="text" placeholder="名前" name="fileset-name" title="fileset-name">
@@ -117,81 +123,31 @@
                     <div id="fileset-path-group" class="fileset-path">
                         <div class="flex-wrapper">
                             <input type="text" placeholder="パス" name="fileset-path" title="file">
-                            <button type="button">
+                            <button class="non-selectable" type="button">
                                 Browse
                             </button>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="bottom-area">
-                <div class="bottom-button" id="tag-button" aria-label="button to edit tags for fileset">
-                    <img src="assets/svg/tag.svg" alt="change its tag">
+                <div class="non-selectable" id="bottom-area">
+                    <div class="bottom-button" id="tag-button" aria-label="button to edit tags for fileset">
+                        <img src="assets/svg/tag.svg" alt="change its tag">
+                    </div>
+                    <div class="bottom-button" id="add-button" aria-label="button to add fileset">
+                        <img src="assets/svg/rectangle.svg" alt="click here to add new fileset">
+                        <img class="hidden" src="assets/svg/checkbox.svg" alt="click here to add new file">
+                    </div>
                 </div>
-                <div class="bottom-button" id="add-button" aria-label="button to add fileset">
-                    <img src="assets/svg/rectangle.svg" alt="click here to add new fileset">
-                    <img class="hidden" src="assets/svg/checkbox.svg" alt="click here to add new file">
+                <div class="tags hidden non-selectable" id="tag-area">
+                    <p class="tag">Programming</p>
+                    <p class="tag">Libraries</p>
+                    <p class="tag">NSFW</p>
+                    <p class="tag">Game</p>
+                    <p class="tag">AndSome</p>
                 </div>
-            </div>
-            <div class="tags hidden" id="tag-area">
-                <p class="tag">Programming</p>
-                <p class="tag">Libraries</p>
-                <p class="tag">NSFW</p>
-                <p class="tag">Game</p>
-                <p class="tag">AndSome</p>
             </div>
         </div>
         <ul id="filesets">
-            <li class="fileset">
-                <div class="fileset-header">
-                    <div class="fileset-identifiers">
-                        <p class="fileset-name">Python Libs</p>
-                        <p class="fileset-path">C:/Users/UserName/AppData/Local/Programs/Python/Python311/python.exe</p>
-                    </div>
-                    <div class="fileset-menu-wrapper">
-                        <label for="chkbox1">...</label>
-                        <input type="radio" name="menu" id="chkbox1" class="fileset-menu-checkbox">
-                        <ul class="menu">
-                            <li class="fileset-menu-item">編集する</li>
-                            <li class="fileset-menu-item">削除</li>
-                            <li class="fileset-menu-item">開き方を指定する</li>
-                            <li class="fileset-menu-item">パスをコピーする</li>
-                            <li class="fileset-menu-item">ファイルを開く</li>
-                            <li class="fileset-menu-item">親フォルダを開く</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="tags">
-                    <p class="tag">Programming</p>
-                    <p class="tag">Libraries</p>
-                </div>
-            </li>
-            <li class="fileset">
-                <div class="fileset-header">
-                    <div class="fileset-identifiers">
-                        <p class="fileset-name">Private somethings</p>
-                        <p class="fileset-path">
-                            C:/Users/UserName/for-school/Advanced-chemistry/reports/1/pdfs/hidden-folder/games/hogehoge/hogehoge.exe
-                        </p>
-                    </div>
-                    <div class="fileset-menu-wrapper">
-                        <label for="chkbox2">...</label>
-                        <input type="radio" name="menu" id="chkbox2" class="fileset-menu-checkbox">
-                        <ul class="menu">
-                            <li class="fileset-menu-item">編集する</li>
-                            <li class="fileset-menu-item">削除</li>
-                            <li class="fileset-menu-item">開き方を指定する</li>
-                            <li class="fileset-menu-item">パスをコピーする</li>
-                            <li class="fileset-menu-item">ファイルを開く</li>
-                            <li class="fileset-menu-item">親フォルダを開く</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="tags">
-                    <p class="tag">NSFW</p>
-                    <p class="tag">Game</p>
-                </div>
-            </li>
         </ul>
     </div>
     <script defer>
@@ -249,6 +205,28 @@
                 e.preventDefault()
                 document.querySelector("#tag-area").scrollBy(e.deltaY, 0)
             }
+        })
+        let container = document.querySelector("#fileset-editor-container");
+        container.addEventListener("click", () => {
+            // coverにhiddenがなければhiddenを付与し, contentのhiddenを削除    
+            if (!container.querySelector(".cover").classList.contains("hidden")) {
+                container.querySelector(".cover").classList.add("hidden");
+                container.querySelector(".content").classList.remove("hidden");
+            }
+        })
+        // クリックした位置がcontainer以外ならcoverにhiddenを削除し, contentにhiddenを付与
+        document.querySelector("html").addEventListener("click", (e) => {
+            if (!container.contains(e.target)) {
+                if (!container.querySelector(".content").classList.contains("hidden")) {
+                    container.querySelector(".cover").classList.remove("hidden");
+                    container.querySelector(".content").classList.add("hidden");
+                }
+            }
+        })
+        document.querySelectorAll("#tag-area .tag").forEach((tag) => {
+            tag.addEventListener("click", () => {
+                tag.classList.toggle("selected");
+            })
         })
     </script>
 </body>
