--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
     </div>
 
     <div id="main" class="inactive">
-        <div class="fileset-editor-container">
+        <div id="fileset-editor-container">
             <div class="cover non-selectable">
                 <div class="bottom-button">
                     <img src="assets/svg/tag.svg">
@@ -115,12 +115,12 @@
                     <img class="hidden" src="assets/svg/checkbox.svg">
                 </div>
             </div>
-            <div class="content hidden fileset-editor" id="">
-                <div id="" class="fileset-header editing-fileset-identifiers">
-                    <div id="" class="fileset-name fileset-name-group">
+            <div class="hidden fileset-editor">
+                <div class="fileset-header">
+                    <div class="fileset-name">
                         <input type="text" placeholder="名前" name="fileset-name" title="fileset-name">
                     </div>
-                    <div id="" class="fileset-path fileset-path-group">
+                    <div class="fileset-path">
                         <div class="flex-wrapper">
                             <input type="text" placeholder="パス" name="fileset-path" title="file">
                             <button class="non-selectable" type="button">
@@ -129,19 +129,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="non-selectable bottom-area" id="">
-                    <div class="bottom-button tag-button" id="" aria-label="button to edit tags for fileset">
+                <div class="non-selectable bottom-area">
+                    <div class="bottom-button tag-button" aria-label="button to edit tags for fileset">
                         <img src="assets/svg/tag.svg" alt="change its tag">
                     </div>
-                    <div class="bottom-button add-button" id="" aria-label="button to add fileset">
+                    <div class="bottom-button add-button" aria-label="button to add fileset">
                         <img src="assets/svg/rectangle.svg" alt="click here to add new fileset">
                         <img class="hidden" src="assets/svg/checkbox.svg" alt="click here to add new file">
                     </div>
                 </div>
-                <div class="tags hidden non-selectable tag-area" id="">
+                <div class="tags hidden non-selectable">
                     <p class="tag">Programming</p>
                     <p class="tag">Libraries</p>
-                    <p class="tag">NSFW</p>
+                <p class="tag">Stylesheets</p>
                     <p class="tag">Game</p>
                     <p class="tag">AndSome</p>
                 </div>
@@ -151,68 +151,53 @@
         </ul>
     </div>
     <script defer>
-        function dynamicallySizing() {
-            if (this.value === "") {
-                this.style.width = null;
-                return;
-            }
-            let p = document.createElement("p");
-            p.style.fontSize = window.getComputedStyle(this).fontSize;
-            p.style.fontFamily = window.getComputedStyle(this).fontFamily;
-            p.style.padding = "0px";
-            p.style.margin = "0px";
-            p.style.border = "0px";
-            p.style.outline = "0px";
-            p.style.width = "fit-content";
-            p.textContent = this.value;
-            document.body.appendChild(p);
-            this.style.width = p.clientWidth + "px";
-            document.body.removeChild(p);
-        }
-
-        document.querySelectorAll(".dynamically-sizing").forEach((element) => {
-            element.addEventListener("input", dynamicallySizing);
-        });
-
-        document.querySelector(".add-button").addEventListener("mouseover", () => {
-            document.querySelectorAll(".add-button img").forEach((element) => {
+    document.querySelectorAll(".add-button").forEach((t) => {
+        t.addEventListener("mouseover", () => {
+            t.querySelectorAll(".add-button img").forEach((element) => {
                 element.classList.toggle("hidden");
             });
         });
-        document.querySelector(".add-button").addEventListener("mouseout", () => {
-            document.querySelectorAll(".add-button img").forEach((element) => {
+    })
+    document.querySelectorAll(".add-button").forEach((t) => {
+        t.addEventListener("mouseout", () => {
+            t.querySelectorAll(".add-button img").forEach((element) => {
                 element.classList.toggle("hidden");
             });
         });
-        document.querySelector(".tag-button").addEventListener("click", () => {
-            document.querySelector(".tag-area").classList.toggle("hidden");
+    })
+    document.querySelectorAll(".tag-button").forEach((t) => {
+        t.addEventListener("click", () => {
+            t.parentElement.parentElement.querySelector(".tags").classList.toggle("hidden");
         });
+    })
         // ホイールで横スクロール
-        document.querySelector(".tag-area").addEventListener("mousewheel", e => {
+    document.querySelectorAll(".tags").forEach((t) => {
+        t.addEventListener("mousewheel", e => {
             if (e.deltaX === 0) {
                 e.stopPropagation()
                 e.preventDefault()
-                document.querySelector(".tag-area").scrollBy(e.deltaY, 0)
+                t.scrollBy(e.deltaY, 0)
             }
         })
-        let container = document.querySelector(".fileset-editor-container");
+    })
+    let container = document.querySelector("#fileset-editor-container");
         container.addEventListener("click", () => {
             // coverにhiddenがなければhiddenを付与し, contentのhiddenを削除    
             if (!container.querySelector(".cover").classList.contains("hidden")) {
                 container.querySelector(".cover").classList.add("hidden");
-                container.querySelector(".content").classList.remove("hidden");
+                container.querySelector(".fileset-editor").classList.remove("hidden");
             }
         })
         // クリックした位置がcontainer以外ならcoverにhiddenを削除し, contentにhiddenを付与
         document.addEventListener("click", (e) => {
             if (!container.contains(e.target)) {
-                if (!container.querySelector(".content").classList.contains("hidden")) {
+                if (!container.querySelector(".fileset-editor").classList.contains("hidden")) {
                     container.querySelector(".cover").classList.remove("hidden");
-                    container.querySelector(".content").classList.add("hidden");
+                    container.querySelector(".fileset-editor").classList.add("hidden");
                 }
             }
         })
-        document.querySelectorAll(".tag-area .tag").forEach((tag) => {
+    document.querySelectorAll(".fileset-editor .tags .tag").forEach((tag) => {
             tag.addEventListener("click", () => {
                 tag.classList.toggle("selected");
             })
