Implemented fileset-edit, at least for UI

--- a/src/main.ui.html
+++ b/src/main.ui.html
@@ -68,35 +68,37 @@
                 <p class="tag">Libraries</p>
             </div>
         </li>
-        <div class="fileset-editor fileset">
-            <div class="fileset-header">
-                <div class="fileset-name">
-                    <input type="text" placeholder="名前" name="fileset-name" title="fileset-name"
-                        value="editing-fileset">
-                </div>
-                <div class="fileset-path">
-                    <div class="flex-wrapper">
-                        <input type="text" placeholder="パス" name="fileset-path" title="file" value="editing://path">
-                        <button class="non-selectable" type="button">
-                            Browse
-                        </button>
+        <li class="fileset">
+            <div class="fileset-editor">
+                <div class="fileset-header">
+                    <div class="fileset-name">
+                        <input type="text" placeholder="名前" name="fileset-name" title="fileset-name"
+                            value="editing-fileset">
+                    </div>
+                    <div class="fileset-path">
+                        <div class="flex-wrapper">
+                            <input type="text" placeholder="パス" name="fileset-path" title="file" value="editing://path">
+                            <button class="non-selectable" type="button">
+                                Browse
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="non-selectable bottom-area">
-                <div class="bottom-button add-button" aria-label="button to add fileset">
-                    <img src="assets/svg/rectangle.svg" alt="click here to add new fileset">
-                    <img class="hidden" src="assets/svg/checkbox.svg" alt="click here to add new file">
+                <div class="non-selectable bottom-area">
+                    <div class="bottom-button add-button" aria-label="button to add fileset">
+                        <img src="assets/svg/rectangle.svg" alt="click here to add new fileset">
+                        <img class="hidden" src="assets/svg/checkbox.svg" alt="click here to add new file">
+                    </div>
+                </div>
+                <div class="tags non-selectable">
+                    <p class="tag">Programming</p>
+                    <p class="tag">Libraries</p>
+                    <p class="tag">Stylesheets</p>
+                    <p class="tag">Game</p>
+                    <p class="tag">AndSome</p>
                 </div>
             </div>
-            <div class="tags non-selectable">
-                <p class="tag">Programming</p>
-                <p class="tag">Libraries</p>
-                <p class="tag">Stylesheets</p>
-                <p class="tag">Game</p>
-                <p class="tag">AndSome</p>
-            </div>
-        </div>
+        </li>
         <li class="fileset">
             <div class="fileset-header">
                 <div class="fileset-identifiers">
